syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package="./pb";

service UserService {
    rpc Register (RegisterRequest) returns (UserId) {}
    rpc Login (LoginRequest) returns (Token) {}
    rpc Get (UserId) returns (User) {}
    rpc GetAll (google.protobuf.Empty) returns (Users) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message User {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;

    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Users {
    repeated User users = 1;
}

message Token {
    string token = 1;
}

message UserId {
    string id = 1;
}
